--- a/index.html
+++ b/index.html
@@ -1,1 +1,94 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DevOps Engineer Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 20px;
+        }
+        h1, h2 {
+            color: #2E8B57;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        .section {
+            margin-bottom: 40px;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .contact-info {
+            font-style: italic;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- Header Section -->
+        <h1>DevOps Engineer - Zain-ul-abedin</h1>
+        <p>I'm a DevOps Engineer with expertise in cloud computing, infrastructure automation, and container orchestration. My skill set focuses on tools like Docker, Kubernetes, and AWS, combined with deep knowledge of Linux and automation tools to streamline workflows.</p>
+
+        <!-- Skills Section -->
+        <div class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li><strong>Computer Networks:</strong> Network protocols, TCP/IP, VPN, DNS, Load Balancing</li>
+                <li><strong>Cloud Platforms:</strong> AWS (EC2, S3, RDS, IAM, Lambda)</li>
+                <li><strong>Containerization:</strong> Docker (Container Creation, Image Management)</li>
+                <li><strong>Orchestration:</strong> Kubernetes (Pod Management, Helm Charts, Cluster Management)</li>
+                <li><strong>CI/CD:</strong> Jenkins, GitHub Actions</li>
+                <li><strong>Version Control:</strong> Git, GitHub</li>
+                <li><strong>Linux:</strong> Shell scripting, system administration</li>
+            </ul>
+        </div>
+
+        <!-- Projects Section -->
+        <div class="section">
+            <h2>Projects</h2>
+            <ul>
+                <li><strong>Kubernetes Orchestration for Microservices:</strong> Deployed a set of microservices using Kubernetes, managed with Helm charts. <a href="https://github.com/yourusername/kubernetes-microservices" target="_blank">View Project</a></li>
+                <li><strong>AWS Infrastructure Automation with Terraform:</strong> Automated the provisioning of cloud infrastructure using Terraform on AWS. <a href="https://github.com/yourusername/aws-terraform-infrastructure" target="_blank">View Project</a></li>
+                <li><strong>CI/CD Pipeline with Jenkins for Node.js App:</strong> Built a continuous integration pipeline using Jenkins and Docker to automate the deployment of a Node.js application. <a href="https://github.com/yourusername/ci-cd-node-app" target="_blank">View Project</a></li>
+            </ul>
+        </div>
+
+        <!-- Certifications Section -->
+        <div class="section">
+            <h2>Certifications</h2>
+            <ul>
+                <li>AWS Certified Solutions Architect</li>
+                <li>Docker Certified Associate</li>
+                <li>Certified Kubernetes Administrator (CKA)</li>
+            </ul>
+        </div>
+
+        <!-- Contact Section -->
+        <div class="section">
+            <h2>Contact</h2>
+            <p class="contact-info">Email: zainjutt68@gmail.com</p>
+            <p class="contact-info">GitHub: <a href="https://github.com/Zain-ul-abedin" target="_blank">github.com/yourusername</a></p>
+            <p class="contact-info">LinkedIn: <a href="https://linkedin.com/in/Zain-ul-abedin" target="_blank">linkedin.com/in/yourusername</a></p>
+        </div>
+    </div>
+</body>
+</html>
