--- a/index.html
+++ b/index.html
@@ -1,1 +1,169 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DevOps Engineer Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #2E8B57;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #2E8B57;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        .section {
+            margin-bottom: 40px;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .contact-info {
+            font-style: italic;
+        }
+        .slideshow-container {
+            max-width: 100%;
+            position: relative;
+            margin: auto;
+        }
+        .slides {
+            display: none;
+        }
+        .prev, .next {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            width: auto;
+            padding: 16px;
+            margin-top: -22px;
+            color: white;
+            font-weight: bold;
+            font-size: 18px;
+            transition: 0.6s ease;
+            border-radius: 0 3px 3px 0;
+        }
+        .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+        }
+        .prev:hover, .next:hover {
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>DevOps Engineer Portfolio - [Your Name]</h1>
+    </header>
+
+    <div class="container">
+        <!-- Skills Section -->
+        <div class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li><strong>Computer Networks:</strong> Network protocols, TCP/IP, VPN, DNS, Load Balancing</li>
+                <li><strong>Cloud Platforms:</strong> AWS (EC2, S3, RDS, IAM, Lambda)</li>
+                <li><strong>Containerization:</strong> Docker (Container Creation, Image Management)</li>
+                <li><strong>Orchestration:</strong> Kubernetes (Pod Management, Helm Charts, Cluster Management)</li>
+                <li><strong>CI/CD:</strong> Jenkins, GitHub Actions</li>
+                <li><strong>Version Control:</strong> Git, GitHub</li>
+                <li><strong>Linux:</strong> Shell scripting, system administration</li>
+            </ul>
+        </div>
+
+        <!-- Projects Section -->
+        <div class="section">
+            <h2>Projects</h2>
+            <div class="slideshow-container">
+                <!-- Slide 1 -->
+                <div class="slides">
+                    <h3>Kubernetes Orchestration for Microservices</h3>
+                    <p>Deployed microservices using Kubernetes, managed with Helm charts.</p>
+                </div>
+
+                <!-- Slide 2 -->
+                <div class="slides">
+                    <h3>AWS Infrastructure Automation with Terraform</h3>
+                    <p>Automated cloud infrastructure using Terraform on AWS.</p>
+                </div>
+
+                <!-- Slide 3 -->
+                <div class="slides">
+                    <h3>CI/CD Pipeline with Jenkins for Node.js App</h3>
+                    <p>Built a CI pipeline with Jenkins, Docker, and AWS.</p>
+                </div>
+
+                <!-- Navigation arrows -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+        </div>
+
+        <!-- Certifications Section -->
+        <div class="section">
+            <h2>Certifications</h2>
+            <ul>
+                <li>AWS Certified Solutions Architect</li>
+                <li>Docker Certified Associate</li>
+                <li>Certified Kubernetes Administrator (CKA)</li>
+            </ul>
+        </div>
+
+        <!-- Contact Section -->
+        <div class="section">
+            <h2>Contact</h2>
+            <p class="contact-info">Email: your-email@example.com</p>
+            <p class="contact-info">GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+            <p class="contact-info">LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></p>
+        </div>
+    </div>
+
+    <!-- Slideshow JavaScript -->
+    <script>
+        let slideIndex = 0;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function showSlides(n) {
+            let i;
+            let slides = document.getElementsByClassName("slides");
+            if (n >= slides.length) {slideIndex = 0}
+            if (n < 0) {slideIndex = slides.length - 1}
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slides[slideIndex].style.display = "block";
+        }
+    </script>
+</body>
+</html>
 
