--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <header>
-        <h1>DevOps Engineer Portfolio - [Your Name]</h1>
+        <h1>DevOps Engineer Portfolio - [Zain-ul-abedin]</h1>
     </header>
 
     <div class="container">
@@ -139,8 +139,8 @@
         <div class="section">
             <h2>Contact</h2>
             <p class="contact-info">Email: your-email@example.com</p>
-            <p class="contact-info">GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-            <p class="contact-info">LinkedIn: <a href="https://linkedin.com/in/yourusername" target="_blank">linkedin.com/in/yourusername</a></p>
+            <p class="contact-info">GitHub: <a href="https://github.com/Zain" target="_blank">github.com/Zain</a></p>
+            <p class="contact-info">LinkedIn: <a href="https://linkedin.com/in/Zain ul abedin" target="_blank">linkedin.com/in/Zain</a></p>
         </div>
     </div>
 
